# wasip2-playground

./: README.md  Taskfile.yml  math.wit
wasip2-example/: Cargo.toml  Taskfile.yml
wasip2-example/src/: lib.rs
wasmtime-run/: Cargo.toml
wasmtime-run/src/: main.rs
